app/tasky/k8s/gatekeeper/require-non-root-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirenonroot
spec:
  crd:
    spec:
      names:
        kind: K8sRequireNonRoot
      validation:
        openAPIV3Schema:
          type: object
          properties: {}
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirenonroot

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          not object.get(
            object.get(input.review.object.spec, "securityContext", {}),
            "runAsNonRoot",
            false
          )
          msg := "pod must set spec.securityContext.runAsNonRoot to true"
        }
