app/tasky/k8s/gatekeeper/require-signature-annotation-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireSignatureAnnotation
metadata:
  name: require-image-signature-verification-annotation
spec:
  enforcementAction: deny
  match:
    namespaces:
      - tasky
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
